# marionette

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
client/src/modules/app/: service.rs
client/src/modules/mouse_move/: controller.rs  service.rs
client/src/modules/screen/: controller.rs  service.rs
client/src/utils/: get_screen_size.rs  screen_capturer.rs  screen_recorder.rs
src/: main.rs
src/modules/app/: controller.rs
src/modules/mouse_move/: service.rs
src/modules/screen/: controller.rs  service.rs
src/utils/: video_generator.rs
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx
